erDiagram
	USER ||--o{ PROJECT : "owns"
	USER ||--o{ DONATION : "makes"
	USER ||--o{ COMMENT : "writes"
	USER ||--o{ RATING : "rates"
	USER ||--o{ REPORT : "reports"
	
	PROJECT ||--o{ PROJECT_MEDIA : "has"
	PROJECT ||--o{ DONATION : "receives"
	PROJECT ||--o{ COMMENT : "hosts"
	PROJECT ||--o{ RATING : "is_rated_by"
	PROJECT ||--o{ REPORT : "is_reported"
	PROJECT }o--o{ TAG : "tagged_with"
	CATEGORY ||--o{ PROJECT : "categorizes"
	
	COMMENT ||--o{ COMMENT : "replies_to"
	COMMENT ||--o{ REPORT : "is_reported"

	USER {
			int id PK
			string username
			string first_name
			string last_name
			string email UK
			string password
			string phone_number
			string profile_picture
			boolean is_active
			boolean is_staff
			boolean is_superuser
			date birthdate
			string facebook_profile
			string country
			datetime last_login
			datetime date_joined
			datetime created_at
			datetime deleted_at
	}

	PROJECT {
			int id PK
			string title
			text details
			decimal total_target
			datetime start_time
			datetime end_time
			string status
			int owner_id FK
			int category_id FK
			decimal average_rating
			decimal current_donations
			boolean is_featured
			datetime created_at
			datetime deleted_at
	}

	PROJECT_MEDIA {
			int id PK
			int project_id FK
			string image
			boolean is_cover
			int order
			datetime created_at
	}

	DONATION {
			int id PK
			decimal amount
			int user_id FK
			int project_id FK
			datetime created_at
	}

	CATEGORY {
			int id PK
			string name UK
			text description
			datetime created_at
	}

	TAG {
			int id PK
			string name UK
	}

	COMMENT {
			int id PK
			text content
			int user_id FK
			int project_id FK
			int parent_id FK
			datetime created_at
			datetime deleted_at
	}

	RATING {
			int id PK
			int user_id FK
			int project_id FK
			int value
			datetime created_at
	}

	REPORT {
			int id PK
			string report_type
			text reason
			int reporter_id FK
			int project_id FK
			int comment_id FK
			datetime created_at
	}